testsuite/poke.pkl/gt-strings-diag-1.pk
/* { dg-do compile } */

var a =
  "foo" > [1,2,3]; /* { dg-error "invalid operand.*\n.*expected string" } */
